# Tracking_by_Matching

./: CMakeLists.txt  TrackerByMatcher.cpp  TrackerByMatcher.hpp  main.cpp
trt_lib/cu/: convert.cu  resize.cu  yolo_cuda_preprocess.cu
trt_lib/include/: DarknetParser.h  DetectBox.h  DetectionNN.h  Layer.h  Yolo_TRT.h  kernels.h  utils.h
trt_lib/include/pluginsRT/: DeformableConvRT.h  RouteRT.h  YoloRT.h
trt_lib/src/: DarknetParser.cpp  Dense.cpp  DetectionNN.cpp  LayerWgs.cpp  NetworkRT.cpp  Region.cpp  Upsample.cpp  Yolo.cpp  Yolo_TRT.cpp  utils.cpp
